# rust_test_actix

./: Cargo.toml  Dockerfile  Dockerfile.rust  ReadMe.md  docker-compose.yml  nginx.conf  rust_app.conf  rust_test_actix_cluter.yml
src/: main.rs  websocket.rs
static/css/: default.css
static/js/: home.js
templates/: home.html  login.html
