[package]
name = "rust_test_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
actix-files = "0.6.5"
actix-rt = "2.9.0"
askama = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
local-ip-address = "0.6.1"
actix-web-actors = "4.3.0"